[gd_scene load_steps=2 format=3 uid="uid://ct0nri3kttird"]

[ext_resource type="Script" uid="uid://bsftxc8ryyitp" path="res://NewUI/PlayerAttackUI/enemy_unit_container.gd" id="1_r513h"]

[node name="EnemyUnitContainer" type="VBoxContainer"]
script = ExtResource("1_r513h")

[node name="UnitNameLabel" type="Label" parent="."]
layout_mode = 2
text = "Simple Mech"

[node name="ArmorLabel" type="Label" parent="."]
layout_mode = 2
text = "Armor"
horizontal_alignment = 1

[node name="ArmorBar" type="ProgressBar" parent="."]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="."]
layout_mode = 2
text = "Health"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 2

[node name="SelectButton" type="Button" parent="."]
layout_mode = 2
text = "Select"
